[package]
name = "proc-syscall"
description = "A procedural macro for creating linux syscall functions from function pointer types"
version = "0.1.0"
edition = "2021"
authors = [ "lorn3" ]
repository = "https://github.com/lorn3/proc_syscall"
keywords = ["linux", "syscall", "x86", "x86_64", "amd64"]
categories = [ "hardware-support", "os", "os::linux-apis" ]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full", "parsing"] }
proc-macro2 = "1.0.32"
convert_case = "0.6.0"
